--- a/bootstrap test.html
+++ b/bootstrap test.html
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
   <div class="container-fluid">
     <div class="logo">
-      <a class="navbar-brand text-white" href="#">Sir V</a>
+      <a class="navbar-brand " href="#">Sir V</a>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,19 +25,31 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Portfolio</a>
+          <a class="nav-link active " aria-current="page" href="#">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" href="#">About</a>
+          <a class="nav-link active " href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active text-white" href="#">Contact</a>
+          <a class="nav-link active " href="#">Contact</a>
         </li>
       </ul>
 
     </div>
   </div>
 </nav>
+
+
+
+<section class="about">
+  <div>
+    <h2>About me</h2>
+    <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+      don’t hestiate to contact me.</p>
+    <button type="button" class="resume_button">Get My Resume</button>
+  </div>
+  
+</section>
     
   </body>
 </html>
