--- a/bootstrap test.html
+++ b/bootstrap test.html
@@ -48,39 +48,43 @@
       don’t hestiate to contact me.</p>
     <button type="button" class="resume_button">Get My Resume</button>
   </div>
-  <div class="about_me row gx-6">
-    <div class="info_container col bg-secondary">
-      <div ><img src="img/langguage.svg" alt="" class="about_img rounded-circle bg-white"></div>
+  <div class="about_me row">
+    <div class="info_container col  px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
+      <img src="img/langguage.svg" alt="" class="about_img rounded-circle bg-white mb-4">
       <h3>Languages</h3>
-      <ul class="about_items list-group list-group-horizontal gx-5 ">
-        <li class="about_li list-group-item rounded-pill"><span class="badge bg-white text-success">Javascript</span></li>
-        <li class="bout_li list-group-item"><span class="badge bg-white text-success">Ruby</span></li>
-        <li class="about_li list-group-item"><span class="badge bg-white text-success">Html</span></li>
-        <li class="about_li list-group-item"><span class="badge bg-white text-success">CSS</span></li>
-      </ul>
+      <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
+        <h4><span class="badge bg-white text-success rounded">Javascript</span></h4>
+        <h4><span class="badge bg-white text-success rounded">Ruby</span></h4>
+        <h4><span class="badge bg-white text-success rounded">Html</span></h4>
+        <h4><span class="badge bg-white text-success rounded">CSS</span></h4>
+      </div>
     </div>
-    <div class="info_container col bg-secondary">
-      <div class="about_img rounded"><img src="img/framework.svg" alt=""></div>
-      <h3>Frameworks</h3>
-      <ul class="about_items">
-        <li class="about_li">Bootstrap</li>
-        <li class="bout_li">Ruby on rails</li>
-        <li class="about_li">RSpec</li>
-        <li class="about_li">Capybara</li>
-        <li class="about_li">Selenium</li>
-      </ul>
+
+    <div class="info_container col-md-4 ml-auto px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
+      <img src="img/framework.svg" alt="" class="about_img rounded-circle bg-white mb-4">
+      <h3>Framework</h3>
+      <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
+        <span class="badge bg-white text-success rounded-pill">Bootstrap</span>
+        <span class="badge bg-white text-success rounded-pill">Ruby on rails</span>
+        <span class="badge bg-white text-success rounded-pill">RSpec</span>
+        <span class="badge bg-white text-success rounded-pill">Capubara</span>
+        <span class="badge bg-white text-success rounded-pill">Selenium</span>
+      </div>
     </div>
-    <div class="info_container col-4">
-      <div class="about_img"><img src="img/skills.svg" alt=""></div>
-      <h3>Skills</h3>
-      <ul class="about_ul">
-        <li class="about_li">Codekit</li>
-        <li class="bout_li">Github</li>
-        <li class="about_li">Codepan</li>
-        <li class="about_li">Github</li>
-        <li class="about_li">Terminal</li>
-      </ul>
+
+    <div class="info_container col  px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
+      <img src="img/skills.svg" alt="" class="about_img rounded-circle bg-white mb-4">
+      <h3>skills</h3>
+      <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
+        <span class="badge bg-white text-success rounded-pill">Codekit</span>
+        <span class="badge bg-white text-success rounded-pill">Github</span>
+        <span class="badge bg-white text-success rounded-pill">Codepen</span>
+        <span class="badge bg-white text-success rounded-pill">Gitlab</span>
+        <span class="badge bg-white text-success rounded-pill">Terminal</span>
+      </div>
     </div>
+
+
   </div>
 </section> 
 
@@ -111,6 +115,7 @@
     </form>
   </div>
 </section>
+
 
 <ul class="social_media">
   <li class="social_icon"><a href=""><img alt="My Github" src=""></a></li>
