--- a/bootstrap test.html
+++ b/bootstrap test.html
@@ -42,15 +42,17 @@
 
 
 <section class="about container overflow-hidden text-center">
-  <div class="row">
+  <div class="sup_container row">
     <h2>About me</h2>
-    <p> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+    <p class="sup_about"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
       don’t hestiate to contact me.</p>
-    <button type="button" class="resume_button">Get My Resume</button>
+      <div>
+    <button type="button" class="btn btn-success">Get My Resume</button>
+  </div>
   </div>
   <div class="about_me row">
     <div class="info_container col  px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
-      <img src="img/langguage.svg" alt="" class="about_img rounded-circle bg-white mb-4">
+      <img src="img/langguage.svg" alt="Languages" class="about_img rounded-circle bg-white mb-4">
       <h3>Languages</h3>
       <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
         <h4><span class="badge bg-white text-success rounded">Javascript</span></h4>
@@ -60,27 +62,27 @@
       </div>
     </div>
 
-    <div class="info_container col-md-4 ml-auto px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
-      <img src="img/framework.svg" alt="" class="about_img rounded-circle bg-white mb-4">
+    <div class="info_container col px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
+      <img src="img/framework.svg" alt="Frameworks" class="about_img rounded-circle bg-white mb-4">
       <h3>Framework</h3>
       <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
-        <span class="badge bg-white text-success rounded-pill">Bootstrap</span>
-        <span class="badge bg-white text-success rounded-pill">Ruby on rails</span>
-        <span class="badge bg-white text-success rounded-pill">RSpec</span>
-        <span class="badge bg-white text-success rounded-pill">Capubara</span>
-        <span class="badge bg-white text-success rounded-pill">Selenium</span>
+        <h4><span class="badge bg-white text-success rounded-pill">Bootstrap</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Ruby on rails</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">RSpec</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Capubara</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Selenium</span></h4>
       </div>
     </div>
 
     <div class="info_container col  px-md-1 bg-light rounded border border-secondary d-flex flex-column align-items-center justify-content-center">
-      <img src="img/skills.svg" alt="" class="about_img rounded-circle bg-white mb-4">
+      <img src="img/skills.svg" alt="Skills" class="about_img rounded-circle bg-white mb-4">
       <h3>skills</h3>
       <div class="about_items d-flex flex-wrap justify-content-center align-items-center">
-        <span class="badge bg-white text-success rounded-pill">Codekit</span>
-        <span class="badge bg-white text-success rounded-pill">Github</span>
-        <span class="badge bg-white text-success rounded-pill">Codepen</span>
-        <span class="badge bg-white text-success rounded-pill">Gitlab</span>
-        <span class="badge bg-white text-success rounded-pill">Terminal</span>
+        <h4><span class="badge bg-white text-success rounded-pill">Codekit</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Github</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Codepen</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Gitlab</span></h4>
+        <h4><span class="badge bg-white text-success rounded-pill">Terminal</span></h4>
       </div>
     </div>
 
